package com.xinqihd.sns.gameserver.proto;
//请求公告、活动信息
option java_outer_classname = "XinqiBceAskRoundOver"; 
message BceAskRoundOver {
  optional string sessionId = 1;
}
